gitignore file updated.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 News/News.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
 News/News.xcodeproj/project.xcworkspace/xcuserdata/abc.xcuserdatad/UserInterfaceState.xcuserstate
 News/News.xcodeproj/xcuserdata/abc.xcuserdatad/xcschemes/xcschememanagement.plist
+News/News.xcworkspace/contents.xcworkspacedata
+News/.DS_Store
+News/Podfile.lock
+.DS_Store
+.DS_Store
+.DS_Store
