ignore file updated.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ News/Podfile.lock
 .DS_Store
 .DS_Store
 .DS_Store
+News/News.xcodeproj/xcuserdata/abc.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
